Container alignment fix (incomplete)

--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,18 @@
 section {
     height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    
     scroll-snap-align: start;
+}
+
+.title {
+    margin-top: 15vh;
+    margin-left: 5vw;
+}
+
+.descriptionBox {
+    margin-left: 5vw;
+    margin-right: 25vw;
 }
 
 .navbar-toggler-icon {
